[package]
name = "ezwhois-rs"
version = "0.1.2"
edition = "2021"
readme = "README.md"
description = "A crate for querying WHOIS data and parsing this information, while providing a comfortable high-level API"
repository = "https://github.com/z3ntl3/ezwhois-rs"
license-file = "LICENSE"
keywords = ["whois", "parser", "lookup"]
categories = ["parsing",]

[features]
default = ["parser"]
parser = []

[dependencies]
chrono = {version = "0.4.39", features = ["alloc"]}
tokio = { version = "1.43.0", features = ["full"]}
thiserror = "2.0.11"
